--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -767,6 +767,10 @@ text-align: center;
   gap: .6875rem;
   font-size: 1.625rem;
   line-height: 1.875rem;
+  img {
+    display: flex;
+  align-items: center;
+  }
 }
 @media (max-width: 48rem) {
   .dishes__body-title-conteiner {
